# EscapeVelocity

./: .gitignore  GETSTARTED.md  PRD.md  PROMPT.md  README.md  ROADMAP.md
EscapeVelocity-native-tauri/: README.md  THIRD_PARTY.md  index.html  package-lock.json  package.json
EscapeVelocity-native-tauri/.cargo/: config.toml
EscapeVelocity-native-tauri/src/: App.tsx  main.tsx
EscapeVelocity-native-tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
EscapeVelocity-native-tauri/src-tauri/examples/: prewarm_cache.rs
EscapeVelocity-native-tauri/src-tauri/src/: lib.rs  main.rs
EscapeVelocity-native-tauri/src-tauri/src/compile/: mod.rs  synctex.rs
EscapeVelocity-native-tauri/src-tauri/src/export/: mod.rs
EscapeVelocity-native-tauri/src-tauri/src/import/: mod.rs
EscapeVelocity-native-tauri/src-tauri/src/latexgen/: mod.rs  model.rs  presets.rs
EscapeVelocity-native-tauri/src-tauri/src/project/: mod.rs
EscapeVelocity-native-tauri/src-tauri/tests/: compile_smoke.rs  export_test.rs  latexgen_golden.rs  synctex_test.rs
EscapeVelocity-native-tauri/src-tauri/tests/golden/: sample_6x9.tex
EscapeVelocity-native-tauri/src/command-palette/: CommandPalette.tsx  fuzzy.ts
EscapeVelocity-native-tauri/src/commands/: keymap.ts  registry.ts  types.ts
EscapeVelocity-native-tauri/src/compile/: api.ts  store.ts
EscapeVelocity-native-tauri/src/editor/: LatexPane.tsx  SlashMenu.tsx  StructuredEditor.tsx  schema.ts  serialize.ts
EscapeVelocity-native-tauri/src/export/: ExportDialog.tsx
EscapeVelocity-native-tauri/src/fixtures/: memoirSample.ts  (+1 more)
(+14 files in other folders)
